<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
<item
    android:id="@+id/home"
    android:title="Liste"
    />
    <item
        android:id="@+id/scanner"
        android:title="Scanner"
        />
    <item
        android:id="@+id/mesbons"
        android:title="Mes bons"/>


</menu>